- cleaned the code - fixed the statistics tab - fixed some bugs